/*
 * Copyright Â© 2020-2021 by Academia Sinica
 *
 * This file is part of SKISSM.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * SKISSM is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with SKISSM.  If not, see <http://www.gnu.org/licenses/>.
 */
syntax = "proto3";

package skissm;

option java_package = "org.e2eelab.skissm.proto";
option java_outer_classname = "E2eeAddress";

message peer_user {
    string user_id = 2;
    string device_id = 3;
}

message peer_group {
    string group_id = 1;
}

message e2ee_address {
    string domain = 1;
    oneof peer {
        peer_user user = 2;
        peer_group group = 3;
    }
}