/*
 * Copyright Â© 2020-2021 by Academia Sinica
 *
 * This file is part of SKISSM.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * SKISSM is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with SKISSM.  If not, see <http://www.gnu.org/licenses/>.
 */
syntax = "proto3";

package skissm;

option java_package = "org.e2eelab.skissm.proto";
option java_outer_classname = "E2eeCommands";

enum e2ee_commands {
    register_user_request = 0;
    register_user_response = 4097;
    get_pre_key_bundle_request = 2;
    get_pre_key_bundle_response = 4099;
    publish_spk_request = 4;
    publish_spk_response = 4101;
    supply_opks_request = 6;
    supply_opks_response = 4103;
    create_group_request = 8;
    create_group_response = 4105;
    get_group_request = 10;
    get_group_response = 4107;
    add_group_members_request = 12;
    add_group_members_response = 4109;
    remove_group_members_request = 14;
    remove_group_members_response = 4111;
    send_one2one_msg_request = 16;
    send_one2one_msg_response = 4113;
    send_group_msg_request = 18;
    send_group_msg_response = 4115;
}