/*
 * Copyright Â© 2020-2021 by Academia Sinica
 *
 * This file is part of SKISSM.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * SKISSM is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with SKISSM.  If not, see <http://www.gnu.org/licenses/>.
 */
syntax = "proto3";

package skissm;

option java_package = "org.e2eelab.skissm.proto";
option java_outer_classname = "CreateGroupMsgProto";

import "skissm/E2eeAddress.proto";
import "skissm/GroupMember.proto";

message CreateGroupMsg {
    string e2ee_pack_id = 1;
    skissm.E2eeAddress sender_address = 2;
    repeated skissm.GroupMember group_members = 3;
    string group_name = 4;
    skissm.E2eeAddress group_address = 5;
}